--- a/scss/blocks/_general.scss
+++ b/scss/blocks/_general.scss
@@ -9,7 +9,7 @@ body {
   line-height: 1.3;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  // min-height: 100vh;
 }
 ul {
   list-style: none;
