--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -6,7 +6,7 @@
     ),
     url(/img/header_backgraund.png) no-repeat center/cover;
   padding-bottom: 60px;
-  min-height: 100vh;
+  height: 100vh;
   .header__navigation {
     display: flex;
     justify-content: space-between;
@@ -56,92 +56,6 @@
             }
           }
         }
-      }
-    }
-    .header__nav_min {
-      display: none;
-      position: absolute;
-      left: 30%;
-      border: 1px solid #3e3e3e56;
-      background: transparent;
-      max-width: 250px;
-      width: 100%;
-      height: 200px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px rgba($color: #000000, $alpha: 1);
-      nav {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        max-width: 250px;
-        width: 100%;
-        margin: 30px auto;
-        .elem {
-          font-size: 20px;
-          font-weight: 700;
-          color: #fff;
-          text-transform: uppercase;
-          text-decoration: none;
-          position: relative;
-          line-height: 26px;
-          &:hover {
-            color: #fce38a;
-          }
-          &::after {
-            display: none;
-            content: "";
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            bottom: 0;
-            width: 100%;
-            height: 2px;
-            color: #fce38a;
-            background: #fce38a;
-          }
-        }
-      }
-    }
-    .header__hamburger {
-      display: none;
-      cursor: pointer;
-      margin-right: 15px;
-      padding-left: 1.25em;
-      position: relative;
-      width: 40px;
-      height: 40px;
-      .hamburger-global {
-        backface-visibility: hidden;
-        position: absolute;
-        left: 0;
-        border-radius: 10px;
-        border-top: 5px solid white;
-        width: 100%;
-        transition: 0.55s;
-      }
-      .burger-top {
-        top: 0;
-      }
-      .burger-middle {
-        top: 18px;
-      }
-      .burger-bottom {
-        top: 36px;
-      }
-      .burger-top-click {
-        backface-visibility: hidden;
-        top: 15px;
-        transform: rotate(50deg);
-        transition: 0.55s 0.5s;
-      }
-      .burger-middle-click {
-        opacity: 0;
-      }
-      .burger-bottom-click {
-        backface-visibility: hidden;
-        top: 15px;
-        transform: rotate(-410deg);
-        transition: 0.55s 0.5s;
       }
     }
   }
@@ -218,7 +132,6 @@
     }
   }
 }
-
 @media screen and (max-width: 1200px) {
   .header {
     .header__items {
@@ -250,13 +163,13 @@
   }
 }
 @media screen and (max-width: 768px) {
+  body.lock {
+    overflow: hidden;
+  }
   .header {
     .header__navigation {
       .header__nav {
         display: none;
-      }
-      .header__hamburger {
-        display: block;
       }
     }
     .header__title {
@@ -269,6 +182,100 @@
           &::after {
             right: 44%;
           }
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 575px) {
+  .header {
+    .header__navigation {
+      .header__hamburger {
+        margin-right: 30px;
+      }
+    }
+  }
+}
+.hamburger-menu {
+  #menu__toggle {
+    opacity: 0;
+  }
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__box {
+    visibility: visible;
+    left: 0;
+    z-index: 100;
+  }
+  .menu__btn {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 40px;
+    right: 55px;
+    width: 30px;
+    height: 25px;
+    cursor: pointer;
+    z-index: 20;
+  }
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    transition-duration: 0.25s;
+  }
+  .menu__btn > span::before {
+    content: "";
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: "";
+    top: 8px;
+  }
+  .menu__box {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 40px 0;
+    list-style: none;
+    background: linear-gradient(
+      180deg,
+      rgba(232, 129, 130, 0.9) 0%,
+      rgba(239, 217, 137, 0.9) 100%
+    );
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+    transition-duration: 0.25s;
+    a {
+      text-decoration: none;
+      &.menu__item {
+        text-transform: uppercase;
+        display: block;
+        margin: 20px auto;
+        color: #fff;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 26px;
+        transition-duration: 0.25s;
+        &:hover {
+          color: #fce38a;
         }
       }
     }
