--- a/scss/blocks/_section1.scss
+++ b/scss/blocks/_section1.scss
@@ -95,3 +95,13 @@
     }
   }
 }
+@media screen and (max-width: 375px) {
+  .about {
+    padding: 50px 0;
+    .about__title {
+      h2 {
+        padding-bottom: 50px;
+      }
+    }
+  }
+}
