--- a/src/index.css
+++ b/src/index.css
@@ -1284,8 +1284,6 @@ footer {
 .whatWeDo .whatWeDo__slider .whatWeDo__slide .whatWeDo__slide_logo {
   max-width: 144px;
   width: 100%;
-  max-height: 144px;
-  height: 100%;
   border: 3px solid #95e1d3;
   padding: 40px;
   margin-right: 60px;
@@ -1309,13 +1307,32 @@ footer {
     max-width: 510px;
     width: 100%;
   }
+  .whatWeDo .container .whatWeDo__title {
+    margin: 40px 0;
+  }
+  .whatWeDo .container .whatWeDo__content {
+    margin-bottom: 20px;
+  }
+  .whatWeDo .container .whatWeDo__content .whatWeDo__slaids .accordion__items .accordion__item .accordion__pick h6 {
+    font-size: 13px;
+  }
   .whatWeDo .container .whatWeDo__slider .whatWeDo__slide .whatWeDo__slide_items p {
     font-size: 13px;
+  }
+  .whatWeDo .container .whatWeDo__slider .whatWeDo__slide .whatWeDo__slide_items h6 {
+    font-size: 13px;
+  }
+  .whatWeDo .container .whatWeDo__slider .whatWeDo__slide .whatWeDo__slide_items h6 span {
+    margin-right: 10px;
   }
   .whatWeDo .container .whatWeDo__slider .whatWeDo__slide .whatWeDo__slide_logo img {
     max-width: 100px;
     width: 100%;
     height: auto;
+  }
+  .whatWeDo .container .whatWeDo__slider .whatWeDo__slide .whatWeDo__slide_logo {
+    max-width: 100px;
+    padding: 25px;
   }
 }
 
@@ -1497,6 +1514,23 @@ footer {
   margin: 0 auto;
 }
 
+@media screen and (max-width: 1140px) {
+  .team .team__logo {
+    max-width: 380px;
+    margin: 0 auto;
+  }
+  .team .team__logo:last-child {
+    margin-top: 30px;
+  }
+  .partners .partners__content .partners__logotip {
+    max-width: 380px;
+    margin: 0 auto;
+  }
+  .partners .partners__content .partners__logotip:last-child {
+    margin-top: 30px;
+  }
+}
+
 @media screen and (max-width: 960px) {
   .team .team__title {
     margin-bottom: 50px;
@@ -1533,20 +1567,12 @@ footer {
   }
 }
 
-@media screen and (max-width: 1140px) {
-  .team .team__logo {
-    max-width: 380px;
-    margin: 0 auto;
+@media screen and (max-width: 576px) {
+  .team {
+    padding: 25px 0 0;
   }
-  .team .team__logo:last-child {
-    margin-top: 30px;
-  }
-  .partners .partners__content .partners__logotip {
-    max-width: 380px;
-    margin: 0 auto;
-  }
-  .partners .partners__content .partners__logotip:last-child {
-    margin-top: 30px;
+  .partners {
+    padding: 20px 0;
   }
 }
 
@@ -1611,6 +1637,18 @@ footer {
   font-size: 15px;
   font-family: "Roboto", sans-serif;
   color: #999999;
+}
+
+@media screen and (max-width: 992px) {
+  .work .container .work__title {
+    margin-bottom: 80px;
+  }
+}
+
+@media screen and (max-width: 367px) {
+  .work .container .work__title h2::after {
+    top: 105px;
+  }
 }
 
 .work .container .work__content {
@@ -1693,6 +1731,31 @@ footer {
   line-height: 1.6;
 }
 
+.work .container .work__slider .owl-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: absolute;
+  height: 0;
+  width: 100%;
+  top: 40%;
+}
+
+.work .container .work__slider .owl-nav button:focus {
+  outline: none;
+}
+
+.work .container .work__slider .owl-nav button span {
+  font-size: 40px;
+  color: #cccccc;
+}
+
 .work .container .work__slider .work__slide {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1768,11 +1831,44 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-  .work__item img {
+  .work .container .work__title {
+    margin-bottom: 50px;
+  }
+  .work .container .work__item img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .work .container {
+    max-width: 510px;
+    width: 100%;
+  }
+  .work .container .work__title {
+    margin: 40px 0;
+  }
+  .work .container .work__content {
+    margin-bottom: 40px;
+  }
+  .work .container .work__slider .work__slide .work__slide_items p {
+    font-size: 13px;
+  }
+  .work .container .work__slider .work__slide .work__slide_items h6 {
+    font-size: 13px;
+  }
+  .work .container .work__slider .work__slide .work__slide_items h6 span {
+    margin-right: 10px;
+  }
+  .work .container .work__slider .work__slide .work__slide_logo img {
+    max-width: 100px;
+    width: 100%;
+    height: auto;
+  }
+  .work .container .work__slider .work__slide .work__slide_logo {
+    max-width: 100px;
   }
 }
 
@@ -1786,6 +1882,12 @@ footer {
 @media screen and (max-width: 992px) {
   .feedback {
     padding: 50px 0;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .feedback {
+    padding: 20px;
   }
 }
 
@@ -1836,6 +1938,12 @@ footer {
   font-size: 15px;
   font-family: "Roboto", sans-serif;
   color: #999999;
+}
+
+@media screen and (max-width: 334px) {
+  .feedback .feedback__title h2::after {
+    top: 105px;
+  }
 }
 
 .feedback .feedback__content .feedback__items {
