--- a/scss/blocks/_section7.scss
+++ b/scss/blocks/_section7.scss
@@ -3,9 +3,7 @@
   @media screen and (max-width: 992px) {
     padding: 50px 15px;
   }
-  .container {
-    padding: 0;
-    max-width: 1140px;
+  .work__header {
     .work__title {
       @include title;
       @media screen and (max-width: 992px) {
@@ -19,66 +17,67 @@
         }
       }
     }
-    .work__content {
+  }
+  .work__content {
+    margin-bottom: 100px;
+    .work__items {
       padding: 0;
-      margin: 0 0 100px 0;
-      .work__items {
+      display: flex;
+      flex-wrap: wrap;
+      .work__duble {
         padding: 0;
-        display: flex;
-        flex-wrap: wrap;
-        .work__duble {
-          padding: 0;
-        }
-        .work__item {
-          padding: 0;
-          max-width: 100%;
-          height: auto;
-          position: relative;
-          transition: 0.5s;
-          cursor: pointer;
-          .work__pick {
-            img {
-              width: 100%;
-              height: auto;
-              display: block;
-            }
-          }
-          .work__overlay {
-            position: absolute;
-            top: 0;
-            height: 0;
+      }
+      .work__item {
+        padding: 0;
+        max-width: 100%;
+        height: auto;
+        position: relative;
+        transition: 0.5s;
+        cursor: pointer;
+        .work__pick {
+          img {
             width: 100%;
-            height: 100%;
-            background: linear-gradient(
-              180deg,
-              rgba(232, 129, 130, 0.9) 0%,
-              rgba(239, 217, 137, 0.9) 100%
-            );
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            transition: 0.5s;
-            opacity: 0;
-            &:hover {
-              opacity: 1;
-            }
-            h6 {
-              color: rgb(255, 255, 255);
-              margin: 18px 0 15px;
-              font-size: 14px;
-              text-transform: uppercase;
-            }
-            p {
-              @include p;
-              color: rgb(255, 255, 255);
-              font-style: italic;
-              line-height: 1.6;
-            }
+            height: auto;
+            display: block;
+          }
+        }
+        .work__overlay {
+          position: absolute;
+          top: 0;
+          height: 0;
+          width: 100%;
+          height: 100%;
+          background: linear-gradient(
+            180deg,
+            rgba(232, 129, 130, 0.9) 0%,
+            rgba(239, 217, 137, 0.9) 100%
+          );
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          transition: 0.5s;
+          opacity: 0;
+          &:hover {
+            opacity: 1;
+          }
+          h6 {
+            color: rgb(255, 255, 255);
+            margin: 18px 0 15px;
+            font-size: 14px;
+            text-transform: uppercase;
+          }
+          p {
+            @include p;
+            color: rgb(255, 255, 255);
+            font-style: italic;
+            line-height: 1.6;
           }
         }
       }
     }
+  }
+  .work__footer {
     .work__slider {
       .owl-nav {
         @include owl-nav;
@@ -133,9 +132,6 @@
       .work__title {
         margin: 40px 0;
       }
-      .work__content {
-        margin-bottom: 40px;
-      }
       .work__slider {
         .work__slide {
           .work__slide_items {
@@ -161,6 +157,9 @@
           }
         }
       }
+    }
+    .work__content {
+      margin-bottom: 40px;
     }
   }
 }
