--- a/scss/blocks/mixins.scss
+++ b/scss/blocks/mixins.scss
@@ -52,6 +52,25 @@
   font-size: 15px;
   font-family: "Roboto", sans-serif;
 }
+//=============Slaid=====================
+@mixin owl-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  height: 0;
+  width: 100%;
+  top: 40%;
+  button {
+    &:focus {
+      outline: none;
+    }
+    span {
+      font-size: 40px;
+      color: #cccccc;
+    }
+  }
+}
 @mixin slaid {
   max-width: 929px;
   width: 100%;
@@ -76,12 +95,14 @@
     }
   }
 }
+//=====================================
 @mixin span {
   max-width: 60px;
   width: 100%;
   height: 3px;
   display: block;
   background: #f38181;
+  margin-right: 15px;
 }
 @mixin footer-subtitle {
   font-size: 14px;
@@ -179,22 +200,4 @@
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-@mixin owl-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: absolute;
-  height: 0;
-  width: 100%;
-  top: 40%;
-  button {
-    &:focus {
-      outline: none;
-    }
-    span {
-      font-size: 40px;
-      color: #cccccc;
-    }
-  }
 }
